# church-date-updater

./: .gitignore  Cargo.toml  README.MD  church_date.html  lower_data.txt
.github/workflows/: rust.yml
src/: lib_church_date.rs  lib_youtube_title.rs  main.rs
